--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -53,3 +53,4 @@ jobs:
           plugin_stackoverflow_lines: 2
           plugin_stackoverflow_lines_snippet: 2
           plugin_stackoverflow_sections: answers-top, questions-recent
+          plugin_stackoverflow_user: 10255036
